--- a/model/src/main/resources/application.properties
+++ b/model/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 # server
 server.port=8080
 
+
+# datasource
+spring.datasource.url=jdbc:mysql://localhost:3306/system?characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 # thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
@@ -8,3 +15,11 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
 spring.thymeleaf.check-template=true
 spring.thymeleaf.check-template-location=true
+
+# JPA
+spring.jpa.database=MYSQL
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
