--- a/mybatis/src/main/resources/application.yml
+++ b/mybatis/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 spring:
   datasource:
     #   数据源基本配置
@@ -25,3 +26,13 @@ spring:
     maxPoolPreparedStatementPerConnectionSize: 20
     useGlobalDataSourceStat: true
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+#  mybatis:
+#    config-location: classpath:mybatis/mybatis-config.xml
+#    mapper-locations: classpath:mybatis/mapper/*.xml
+server:
+  port: 8888
+
+mybatis:
+  mapper-locations: classpath:mybatis/mappers/*.xml
+  type-aliases-package: com.example.mybatis.entity
+#  config-location: classpath:mybatis/mybatis-config.xml
